fixed horizontal scrolling issue on mobile dataUpload

--- a/src/scss/components/_dataUpload.scss
+++ b/src/scss/components/_dataUpload.scss
@@ -50,7 +50,7 @@
       display: flex;
       justify-content: center;
       font-size: 180%;
-      padding: 0 50px 0 50px;
+      // padding: 0 50px 0 50px;
     }
 
     h2,
@@ -264,6 +264,7 @@
       .uploadData {
         margin-top: 25px;
         height: 50px;
+        max-width: 100%;
       }
     }
   }
